-removal of unnecessary code -increase of width for decision relations and fixed layout

--- a/WebContent/css/legacyLayout.css
+++ b/WebContent/css/legacyLayout.css
@@ -17,6 +17,14 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  * ======================================================================== */
+ 
+ 
+ /*
+ * This file has been changed in order to implement the Cloud Decision Support Framework Plus.
+ * Copyright 2015 Balduin Metz	
+ */
+ 
+ 
 @CHARSET "UTF-8";
 
 /* General Element Styles */
