--- a/WebContent/css/cdsfPlus.css
+++ b/WebContent/css/cdsfPlus.css
@@ -6,6 +6,27 @@
 	-moz-border-radius: 0px;
 }
 
+.btn-file {
+	position: relative;
+	overflow: hidden;
+}
+
+.btn-file input[type=file] {
+	position: absolute;
+	top: 0;
+	right: 0;
+	min-width: 100%;
+	min-height: 100%;
+	font-size: 100px;
+	text-align: right;
+	filter: alpha(opacity = 0);
+	opacity: 0;
+	outline: none;
+	background: white;
+	cursor: inherit;
+	display: block;
+}
+
 a, a:active, a:focus {
 	outline: none;
 }
@@ -22,7 +43,6 @@ a, a:active, a:focus {
 .subnav {
 	font-size: 13px;
 	border-bottom: none;
-	margin-bottom: 20px;
 	min-height: 0px;
 }
 
@@ -48,6 +68,14 @@ a, a:active, a:focus {
 	font-weight: bold;
 }
 
+.vspace {
+	margin-bottom: 10px;
+}
+
+.top-buffer {
+	border-top: solid 1px #222;
+}
+
 .footer {
 	background-color: #1b1b1b;
 	background-image: -moz-linear-gradient(top, #222222, #111111);
@@ -66,25 +94,4 @@ a, a:active, a:focus {
 .footer p {
 	color: #BDBDBD;
 	margin: 0px 0px 0px 0px;
-}
-
-.btn-file {
-	position: relative;
-	overflow: hidden;
-}
-
-.btn-file input[type=file] {
-	position: absolute;
-	top: 0;
-	right: 0;
-	min-width: 100%;
-	min-height: 100%;
-	font-size: 100px;
-	text-align: right;
-	filter: alpha(opacity = 0);
-	opacity: 0;
-	outline: none;
-	background: white;
-	cursor: inherit;
-	display: block;
 }
