-added toggle for last outcome paths -new css styles for dps and decs -new objects for dps and decs with functions to support indication that decisions and decision points are decided / predetermined -comments and jsdoc

--- a/WebContent/css/knowledgeBase.css
+++ b/WebContent/css/knowledgeBase.css
@@ -227,6 +227,18 @@
 	stroke: #d9d9d9;
 }
 
+.decided {
+	fill: #fff !important;
+	stroke-width: 2px;
+	stroke: #d9d9d9
+}
+
+.determined {
+	fill: #eee !important;
+	stroke-width: 2px;
+	stroke: #222;
+}
+
 .selectable {
 	cursor: pointer;
 }
