--- a/WebContent/css/knowledgeBase.css
+++ b/WebContent/css/knowledgeBase.css
@@ -173,6 +173,12 @@
 	stroke-width: 2px;
 }
 
+.outRel.requiring {
+	stroke: #FFE81B;
+	stroke-width: 5px;
+	fill: none;
+}
+
 .outRel.ex {
 	
 }
@@ -216,6 +222,11 @@
 	
 }
 
+.requiringArrow {
+	stroke: #FFE81B;
+	fill: #FFE81B;
+}
+
 .highlighted {
 	stroke-width: 3px;
 	stroke: #333;
@@ -251,4 +262,9 @@
 
 .conflict {
 	stroke: red !important;
+}
+
+.required {
+	stroke-width: 4px;
+	stroke: #FFE81B;
 }
