--- a/WebContent/css/legacyLayout.css
+++ b/WebContent/css/legacyLayout.css
@@ -19,7 +19,7 @@
  * ======================================================================== */
 
 /*
- * This file has been changed in order to implement the Cloud Decision Support Framework Plus.
+ * This file has been changed under the Apache 2.0 license in order to implement the Cloud Decision Support Framework Plus.
  * Copyright 2015 Balduin Metz	
  */
 @CHARSET "UTF-8";
