Fixed wrong arrow css style for requiring relations marker in decision relations layout

--- a/WebContent/css/knowledgeBase.css
+++ b/WebContent/css/knowledgeBase.css
@@ -126,9 +126,6 @@
 	fill: #bdbdbd;
 }
 
-/* .requiringArrow {
-	
-} */
 .link.affecting {
 	stroke-dasharray: 4, 4;
 	stroke: #bdbdbd;
@@ -235,7 +232,7 @@
 	
 }
 
-.requiringArrow {
+.outRelArrow.requiringArrow {
 	stroke: #FFE81B;
 	fill: #FFE81B;
 }
