Removed unnecessary css Removed Toolbar description

--- a/WebContent/css/knowledgeBase.css
+++ b/WebContent/css/knowledgeBase.css
@@ -12,7 +12,7 @@
  * the License.
  */
 @CHARSET "UTF-8";
-/*D3 Tooltip*/
+/*D3 Tooltip from http://rawgit.com/Caged/d3-tip/master/examples/example-styles.css*/
 .d3-tip {
 	/* line-height: 1; */
 	/* font-weight: bold; */
@@ -36,15 +36,6 @@
 	pointer-events: none;
 }
 
-/* Northward tooltips */
-.d3-tip.n:after {
-	content: "\25BC";
-	margin: -1px 0 0 0;
-	top: 100%;
-	left: 0;
-	text-align: center;
-}
-
 /* Eastward tooltips */
 .d3-tip.e:after {
 	content: "\25C0";
@@ -62,15 +53,7 @@
 	text-align: center;
 }
 
-/* Westward tooltips */
-.d3-tip.w:after {
-	content: "\25B6";
-	margin: -4px 0 0 -1px;
-	top: 50%;
-	left: 100%;
-}
-
-/*Tree Layout*/
+/*Hierarchical Layout*/
 .treeLink {
 	fill: none;
 	stroke: #D9D9D9;
@@ -97,7 +80,7 @@
 	font-weight: normal;
 }
 
-/*DecisionGraph*/
+/*Decision Relations Layout*/
 .link {
 	fill: none;
 	stroke: #636363;
@@ -151,7 +134,7 @@
 	cursor: default;
 }
 
-/*Outcome Relations Graph*/
+/*Outcome Relations Layout*/
 .layoutLink {
 	fill: none;
 	stroke: #bdbdbd;
